--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td><a href="genome/Smik.ultrascaf.fasta">Smik.unplaced.fasta</a></td>
+              <td><a href="genome/Smik.unplaced.fasta">Smik.unplaced.fasta</a></td>
               <td>Original file</td>
               <td>320 KB</td>
             </tr>
